--- a/css/styles.css
+++ b/css/styles.css
@@ -115,3 +115,12 @@ font-family: 'Ubuntu', sans-serif;
     margin: 20px 20px 50px;
 }
 
+/* pricing section */
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
