--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ font-family: 'Ubuntu', sans-serif;
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 } 
 
 .body {
@@ -63,8 +63,11 @@ font-family: 'Ubuntu', sans-serif;
  /* title-image */
 
  .title-image {
-    width: 60%;
+    
+    width: 20%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
  }
  
 
@@ -72,13 +75,16 @@ font-family: 'Ubuntu', sans-serif;
  
  #features {
     padding: 7% 15%;
-    text-align: center;
+    background-color: #fff;
+    position: relative;
+    /* z-index: 1; */
  }
 
-/*  
+
  .feature-box {
     text-align: center;
- }  */
+    padding: 4.5%;
+ }  
 
 
  /* testimonials section */
