--- a/css/styles.css
+++ b/css/styles.css
@@ -130,3 +130,16 @@ font-family: 'Ubuntu', sans-serif;
 .pricing-column {
     padding: 3% 2%;
 }
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+    .title-image {
+        width: 60%;
+        position: static;
+        transform: rotate(0);
+
+    }
+}
