--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,37 @@
-#title {
-    background-color: #ff4c68;
-    color: #fff;
 
+body {
+    font-family: "montserrate";
+    text-align: center;
 }
 
-h1{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 3rem;
-    line-height: 1.5;
-
-}
-
-h2 {
+h1, h2, h3, h4 {
     font-family: "montserrate-bold";
-    font-size: 3rem;
+}
+
+p {
+    color: #8f8f8f;
+}
+
+
+
+/* Headings */
+
+.big-heading {
+    font-family: "montserrat-black";
+    font-size: 3.5rem;
     line-height: 1.5;
 }
 
-h3 {
-    font-family: 'Montserrat', sans-serif;
-font-family: 'Noto Sans', sans-serif;
-font-family: 'Roboto', sans-serif;
-font-family: 'Ubuntu', sans-serif;
-
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
 }
+ 
+/* contaners */
 
 .container-fluid {
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
 } 
-
-.body {
-    font-family: "montserrate";
-}
 
 /* navigation bar */
 
@@ -60,17 +60,25 @@ font-family: 'Ubuntu', sans-serif;
     margin: 5% 3% 5% 0;
  }
 
+/* title-section */
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+
+}
+#title .container-fluid{
+    padding: 3% 15% 7%;
+}
  /* title-image */
 
  .title-image {
-    
     width: 20%;
     transform: rotate(25deg);
     position: absolute;
     right: 30%;
  }
  
-
  /* features section */
  
  #features {
@@ -80,31 +88,37 @@ font-family: 'Ubuntu', sans-serif;
     /* z-index: 1; */
  }
 
+.feature-title {
+   font-size: 1.5rem;  
+}
 
  .feature-box {
-    text-align: center;
     padding: 4.5%;
  }  
 
-
  /* testimonials section */
 
- #testimonials {
+#testimonials {
     /* padding: 7% 15%; */
-    text-align: center;
     background-color: #ef8172;
     color: #fff;
 
  }
 
- .testimonial-image {
+ .testionial-text {
+    font-size: 3rem;
+    line-height: 1.5;
+
+ }
+
+.testimonial-image {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
  }
  
 .carousel-item {
-    padding: 7% 15%;
+    
 }
 
 /* press */
@@ -125,11 +139,15 @@ font-family: 'Ubuntu', sans-serif;
 
 #pricing {
     padding: 100px;
-    text-align: center;
+
 }
 
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
 .pricing-column {
-    padding: 3% 2%;
+   
 }
 
 @media (max-width: 1028px) {
@@ -149,22 +167,15 @@ font-family: 'Ubuntu', sans-serif;
 
 #cta {
     background-color: #ff4c68;
-    text-align: center;
     color: #fff;
-    padding: 7% 15%;
     
-}
-.cta-heading {
-    font-family: 'montserrat-black';
-    font-size: 3.5rem;
-    line-height: 1.5;
+    
 }
 
 /* footer-sectio */
 
 #footer {
-    text-align: center;
     background-color: #fff;
-    padding: 7% 15%;
+    
 }
 
