--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,19 @@ p {
     padding: 7% 15%;
 } 
 
+/* sections */
+
+.colored-section {
+    background-color: #ff4c68;
+    color: #fff;
+
+}
+
+.white-section {
+    background-color: #fff;
+
+}
+
 /* navigation bar */
 
 .navbar {
@@ -61,12 +74,7 @@ p {
  }
 
 /* title-section */
-#title {
-    background-color: #ff4c68;
-    color: #fff;
-    text-align: left;
 
-}
 #title .container-fluid{
     padding: 3% 15% 7%;
 }
@@ -83,7 +91,6 @@ p {
  
  #features {
     padding: 7% 15%;
-    background-color: #fff;
     position: relative;
     /* z-index: 1; */
  }
@@ -101,8 +108,6 @@ p {
 #testimonials {
     /* padding: 7% 15%; */
     background-color: #ef8172;
-    color: #fff;
-
  }
 
  .testionial-text {
@@ -165,12 +170,6 @@ p {
 
 /* Call to Action */
 
-#cta {
-    background-color: #ff4c68;
-    color: #fff;
-    
-    
-}
 
 /* footer-sectio */
 
